<resources>
    <string name="app_name">Shopping List</string>
    <string name="cb_done">Done</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="enter_item_here">Enter item here</string>
    <string name="price_placeholder">$0.00</string>
    <string name="price_preview">$1.00</string>
    <string name="et_name_error">This field cannot be empty</string>
    <string name="et_price_error">Please enter a price estimate</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">cancel</string>
    <string name="add_edit_title">Add/Edit Item</string>
    <string name="error_item_handler_not_implemented">The activity is not implementing the ItemHandler interface.</string>

    <string-array name="category_names_array">
        <item>Beverages</item>
        <item>Bread/Bakery</item>
        <item>Canned Goods</item>
        <item>Dairy</item>
        <item>Dry/Baking Goods</item>
        <item>Frozen Foods</item>
        <item>Meat</item>
        <item>Produce</item>
        <item>Cleaners</item>
        <item>Personal Care</item>
        <item>Other</item>
    </string-array>
</resources>